crates/sui-graphql-macros/tests/compile/schema_validation_array_on_non_list.stderr
error: Cannot use '[]' on non-list field 'address' (type 'SuiAddress') in path 'object.address[]'
 --> tests/compile/schema_validation_array_on_non_list.rs:7:5
  |
7 |     values: Vec<String>,
  |     ^^^^^^
